tests/NormalTests/paczka1/small_fuzzy/80488713.err
Error in line 1: 9dHShQW A242 77,3
Error in line 10: 9dHShQW Se58 7e,8
Error in line 7: 2gz4FUeODs4 A242 82,5
